--- a/styles/base.css
+++ b/styles/base.css
@@ -130,6 +130,20 @@ body {
   font-family: 'HelveticaNeue-Medium', sans-serif;
   font-weight: 500;
 }
+button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: #075697;
+}
+button:hover,
+button:focus {
+  color: #007a53;
+  text-decoration: underline;
+}
+/* .gh-modal.gh-hidden {
+    display: none;
+} */
 .gh-font-helvetica-neue-roman {
   font-family: 'HelveticaNeue-Roman', sans-serif;
   font-weight: 400;
@@ -637,12 +651,14 @@ td.gh-table-availability {
   border: 1px solid var(--gh-primary);
   font-weight: 500;
   font-size: 18px;
+  text-decoration: none;
 }
 .gh-btn-outline:hover,
 .gh-btn-outline:focus {
   background: var(--gh-primary);
   color: #ffffff;
   border-color: #fff;
+  text-decoration: none;
 }
 
 .gh-main-form {
@@ -704,6 +720,7 @@ td.gh-table-availability {
 }
 .gh-step-completed {
   background: #969696;
+  /* color: #2f2f2f; */
   color: #fff;
 }
 .gh-step-current {
@@ -921,6 +938,10 @@ input[type='radio'] {
   font-size: 16px;
   transition: border-radius 0.15s, box-shadow 0.15s;
   padding: 8px 14px;
+}
+.gh-select-trigger:focus,
+.gh-select-trigger:hover {
+  text-decoration: none !important;
 }
 .gh-custom-select[aria-expanded='true'] .gh-select-trigger {
   border-bottom-left-radius: 0;
@@ -1145,9 +1166,14 @@ input[type='checkbox'] {
   right: 0;
   bottom: 0;
   z-index: 1000;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  max-width: 590px;
+  background: #fff;
+  border-radius: 1rem;
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.18);
+  padding: 0 24px 24px;
+  width: 100%;
+  max-height: 90vh;
+  border: none;
 }
 .gh-modal-overlay {
   position: absolute;
@@ -1161,20 +1187,15 @@ input[type='checkbox'] {
 .gh-modal-content {
   position: relative;
   z-index: 2;
-  background: #fff;
-  border-radius: 1rem;
-  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.18);
-  padding: 2.5rem 2rem 2rem 2rem;
-  max-width: 500px;
-  width: 100%;
-  max-height: 90vh;
   overflow-y: auto;
   animation: fadeIn 0.2s;
+  padding: 48px 24px 24px;
 }
 .gh-modal-close {
   position: absolute;
-  top: 1.2rem;
-  right: 1.2rem;
+  top: 12px;
+  right: 4px;
+  height: 32px;
   background: none;
   border: none;
   font-size: 2rem;
