--- a/styles/base.css
+++ b/styles/base.css
@@ -248,7 +248,7 @@ button:focus {
   flex-direction: column;
   padding: 0 0 24px 0;
   max-width: 1248px;
-  margin: 0 auto;
+  margin: 14px auto 0 auto;
   width: 100%;
 }
 .gh-main-title {
@@ -289,6 +289,7 @@ button:focus {
   gap: 30px;
   width: 100%;
   margin-bottom: 59px;
+  margin-top: 33px;
 }
 .gh-card {
   position: relative;
